moving style to css class

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -19,3 +19,11 @@
   -webkit-user-select: none;
   -o-user-select: none;
 }
+
+.form-standard {
+  margin: 50px 0;
+}
+
+.form-flex {
+  flex: 1;
+}
